--- a/www/style.css
+++ b/www/style.css
@@ -55,7 +55,7 @@ button:hover{
     
     box-shadow: 5px 2px 5px rgb(56, 56, 56);
 }
-#plusminus{
+#nula{
     border-bottom-left-radius: 1em;
 }
 #result{
@@ -82,4 +82,26 @@ header{
     position: fixed;
     bottom: 0;
     left: 0;
+}
+.table{
+    position: absolute;
+    top: 1em;
+    left: 1em;
+    color: white;
+    text-align: center;
+    border: 1px solid white;
+    border-collapse: collapse;
+}
+th{
+    padding: 1em;
+}
+th, td, tr{
+    border: 1px solid white;
+}
+#result{
+    grid-column-start: 3;
+    grid-column-end: 5;
+}
+#body{
+    transition: 1s;
 }
